--- a/pusher/package.json
+++ b/pusher/package.json
@@ -41,6 +41,7 @@
   "homepage": "https://github.com/thecodingmachine/workadventure#readme",
   "dependencies": {
     "axios": "^0.21.2",
+    "bigbluebutton-js": "^0.2.0",
     "busboy": "^0.3.1",
     "circular-json": "^0.5.9",
     "debug": "^4.3.1",
